# tw_stocker

./: prompt.md  pyproject.toml  recommend.py  stock_report.html  update.py
.github/workflows/: update_data.yml  update_recommend.yml
data/: 0050.csv  0051.csv  0052.csv  0053.csv  0055.csv  0056.csv  0057.csv  0061.csv  006203.csv  006204.csv  006205.csv  006206.csv  006207.csv  006208.csv  00625K.csv  00631L.csv  00632R.csv  00633L.csv  00634R.csv  00635U.csv  00636.csv  00636K.csv  00637L.csv  00638R.csv  00639.csv  00640L.csv  00641R.csv  00642U.csv  00643.csv  00643K.csv  00645.csv  00646.csv  00647L.csv  00648R.csv  00650L.csv  00651R.csv  00652.csv  00653L.csv  00654R.csv  00655L.csv  (+1119 more)
data/cache/: rwd_zh_fund_T86_date=20250521&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250522&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250523&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250526&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250527&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250528&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250529&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250602&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250603&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250604&response=json&selectType=ALLBUT0999.json  rwd_zh_fund_T86_date=20250630&response=json&selectType=ALLBUT0999.json  (+70 more)
strategy/: grid.py  institutional_buying.py
templates/: stock_report_template.html
